--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.11",
     "leaflet": "^1.9.4",
+    "leaflet.locatecontrol": "^0.81.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
